# gopher_bot

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml
infra/: .env.example  docker-compose-local.yml  docker-compose.yml
infra/nginx/: nginx.conf
src/bot/: apps.py
src/config/: asgi.py  settings.py  urls.py
src/constants/: __init__.py  admin.py  bot.py  constants.py  models.py  utils.py
src/contents/: admin.py  apps.py  inlines.py  models.py
src/contents/migrations/: 0001_initial.py  0002_alter_post_title.py  0003_post_type.py  0004_post_datetime_publication.py  0005_remove_post_type_posttype.py  0006_posttype_is_publish.py  0007_auto_20250607_0228.py  0008_alter_posttype_time_publication.py  0009_posttype_is_publish_by_admin_and_more.py  0010_remove_posttype_is_publish_and_more.py  0011_auto_20250629_1920.py
src/services/bot/: __init__.py  bot.py  dispatcher.py  filters.py  routers.py  tasks.py
src/services/neural_network/: __init__.py  neural_network.py
src/templates/admin/: base.html
src/user/: admin.py  models.py
src/user/migrations/: 0001_initial.py
src/utils/: bot.py  metaclasses.py  user.py
